--- a/Stealth777/AppInfo/Info.plist
+++ b/Stealth777/AppInfo/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Stealth777 camera use</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>&quot;Log in to your account&quot;</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Roboto-LightItalic</string>
@@ -36,5 +40,16 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>UIRequiredDeviceCapabilities</key>
+	<array>
+		<string>armv7</string>
+	</array>
 </dict>
 </plist>
